# Collusion-Network-Detection

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Collusion-Network-Detection.md  LICENSE  Makefile  PROGRESS.md  README.md  docker-compose.yml  handoff-prompt.md  implementation-plan.md  pyproject.toml
.github/workflows/: ci.yml
backend/api/: __init__.py  app.py  serving.py
backend/collusiongraph/: __init__.py  cli.py
backend/collusiongraph/adapters/: __init__.py  financial.py  procurement.py
backend/collusiongraph/artifacts/: __init__.py  alert_store.py
backend/collusiongraph/eval/: __init__.py  alert_unit.py  metrics.py  report.py  sensitivity.py  significance.py  study.py  tables.py
backend/collusiongraph/explain/: __init__.py  bundles.py  explainer_ablation.py  explainer_runner.py  motif_matcher.py  pgexplainer_runner.py
backend/collusiongraph/features/: __init__.py  financial.py  line_graph.py  screens.py  structural.py
backend/collusiongraph/injection/: __init__.py  injector.py
backend/collusiongraph/models/: __init__.py  baselines.py  ensemble.py  gnn.py  rollup.py  unsupervised.py
backend/collusiongraph/schema/: __init__.py  store.py  tables.py  types.py
backend/collusiongraph/splits/: __init__.py  leakage_checks.py  loco.py  temporal_strict.py
backend/copilot/: __init__.py  agent.py  alert_tools.py  api.py  config.py  corpus.py  goldens.json  goldens.py  guard.py  sql_tools.py  store.py
configs/eval/: alert_unit.yaml  budgets.yaml
configs/experiment/: alert_queue_elliptic_actor.yaml  alert_queue_elliptic_pp.yaml  alert_queue_elliptic_pp_ensemble.yaml  alert_queue_garcia_italy.yaml  alert_queue_mendeley_eu.yaml  baselines_elliptic_pp.yaml  baselines_mendeley_b4_precomputed.yaml  baselines_mendeley_eu.yaml  baselines_mendeley_screens_ablation.yaml  cross_domain_probe_fin2proc.yaml  cross_domain_probe_proc2fin.yaml  ensemble_elliptic_pp.yaml  ensemble_elliptic_pp_multiseed.yaml  explainer_ablation_elliptic_pp.yaml  explanations_elliptic_pp.yaml  explanations_mendeley_eu.yaml  gnn_elliptic_actor_rgcn.yaml  gnn_elliptic_pp_gatv2_focal.yaml  gnn_elliptic_pp_gatv2_focal_cf.yaml  gnn_elliptic_pp_gatv2_focal_line.yaml  gnn_elliptic_pp_gatv2_focal_multi.yaml  gnn_elliptic_pp_gatv2_focal_multiseed.yaml  gnn_elliptic_pp_gatv2_focal_unidir.yaml  gnn_elliptic_pp_gatv2_wce.yaml  gnn_elliptic_pp_gatv2_wce_multiseed.yaml  gnn_elliptic_pp_sage_focal.yaml  gnn_elliptic_pp_sage_wce.yaml  gnn_mendeley_rgcn.yaml  gnn_mendeley_rgcn_multiseed.yaml  injection_recovery_elliptic_pp.yaml  injection_recovery_ocds_georgia.yaml  injection_recovery_ocds_georgia_multiseed.yaml  label_efficiency_fin2proc.yaml  label_efficiency_proc2fin.yaml  label_noise_elliptic_pp.yaml  practitioner_study.yaml  sensitivity_elliptic_pp.yaml  sensitivity_mendeley_eu.yaml  transfer_loco_matrix_mendeley.yaml  transfer_loco_mendeley.yaml  (+1 more)
data/manifests/: amlworld_hi_small.json  elliptic.json  elliptic_pp.json  garcia_rodriguez.json  mendeley_eu.json  ocds_georgia.json
docker/: Dockerfile.api
docs/: DATASETS.md  architecture.html  demo_script.md  deployment.md  ethics_and_scope.md  frontend_overhaul.md  model_card.md  paper_blueprint.md  practitioner_study.md  red_flag_mappings.md  red_team_review.md  reproducibility.md
docs/datasheets/: amlworld_hi_small.md  elliptic_pp.md  garcia_rodriguez.md  mendeley_eu.md  ocds_georgia.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
notebooks/: 01_elliptic_pp_eda.ipynb  02_elliptic_base_eda.ipynb  03_mendeley_eu_eda.ipynb  04_garcia_rodriguez_eda.ipynb  05_amlworld_hi_small_eda.ipynb
reference/genai-chatbot/: .env.example  README.md
scripts/: build_demo_artifacts.py  build_dev_store.py  download_data.py
(+162 files in other folders)
